# notion

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: check.yml
src/: config.rs  lib.rs  main.rs  mock.rs
