[package]
name = "notion"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
uuid = "1.22.0"
