[package]
name = "notion"
version = "0.1.0"
edition = "2024"

[features]
default = []
mcp = ["dep:rmcp", "dep:schemars", "dep:tokio"]
test-utils = ["dep:tokio"]

[dependencies]
async-trait = "0.1.89"
dirs = "6.0.0"
reqwest = { version = "0.13.1", features = ["json", "rustls"] }
rmcp = { version = "1.2.0", features = ["server", "transport-io", "macros", "schemars"], optional = true }
schemars = { version = "1.2.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"], optional = true }
